통계 api 추가, swagger 업데이트
